--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 mt-5">
-                    <form class="contact-form" method="post" action="mailto:youremail@example.com" enctype="text/plain">
+                    <form class="contact-form" action="https://formspree.io/f/mldjrgpw" method="POST">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
